--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     </head>
     <body>
         <div class="periodictable">
-          
-                <div  class="element group-1" style="grid-column: 1; grid-row: 1;">
+          <div class="element label" style="color: orange; grid-column: 6; grid-row: 1 ;">Legends</div>
+                <div class="element label" style="color: yellow; grid-column: 7; grid-row: 1 ;">Milfs</div>
+                <div class="element label" style="color: red; grid-column: 8; grid-row: 1 ;">Wifey</div>
+                <div class="element label" style="color: rgb(0, 81, 255) ;grid-column: 9; grid-row: 1 ;">Goth</div>
+               <div class="element label" style="color: cyan; grid-column: 10; grid-row: 1  ;">Japanese</div>
+              
+             <div  class="element group-1" style="grid-column: 1; grid-row: 1;">
                     <span class="pornographic-no">1</span>
                     <span class="symbol">Mk</span>
                     <span class="name">Mia khalifa</span>
